--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   ],
   "dependencies": {
     "prop-types": "^15.6.1",
-    "react-fast-compare": "^2.0.4"
+    "react-fast-compare": "^2.0.4",
+    "react-native-modal": "^11.5.6"
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "0.0.5",
